--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.7.95" !default;
+$mdi-version:          "3.8.95" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -446,6 +446,8 @@ $mdi-icons: (
     "backspace-reverse": FE9B,
     "backspace-reverse-outline": FE9C,
     "backup-restore": F06F,
+    "bacteria": FEF2,
+    "bacteria-outline": FEF3,
     "badminton": F850,
     "bag-personal": FDF3,
     "bag-personal-off": FDF4,
@@ -729,6 +731,8 @@ $mdi-icons: (
     "calculator": F0EC,
     "calculator-variant": FA99,
     "calendar": F0ED,
+    "calendar-account": FEF4,
+    "calendar-account-outline": FEF5,
     "calendar-alert": FA30,
     "calendar-blank": F0EE,
     "calendar-blank-outline": FB42,
@@ -761,6 +765,8 @@ $mdi-icons: (
     "calendar-today": F0F6,
     "calendar-week": FA32,
     "calendar-week-begin": FA33,
+    "calendar-weekend": FEF6,
+    "calendar-weekend-outline": FEF7,
     "call-made": F0F7,
     "call-merge": F0F8,
     "call-missed": F0F9,
@@ -788,6 +794,8 @@ $mdi-icons: (
     "camera-off": F5DF,
     "camera-outline": FD39,
     "camera-party-mode": F105,
+    "camera-plus": FEF8,
+    "camera-plus-outline": FEF9,
     "camera-rear": F106,
     "camera-rear-variant": F107,
     "camera-retake": FDFC,
@@ -796,6 +804,7 @@ $mdi-icons: (
     "camera-timer": F109,
     "camera-wireless": FD92,
     "camera-wireless-outline": FD93,
+    "campfire": FEFA,
     "cancel": F739,
     "candle": F5E2,
     "candycane": F10A,
@@ -926,6 +935,7 @@ $mdi-icons: (
     "chart-tree": FEB1,
     "chat": FB55,
     "chat-alert": FB56,
+    "chat-outline": FEFB,
     "chat-processing": FB57,
     "check": F12C,
     "check-all": F12D,
@@ -1197,10 +1207,14 @@ $mdi-icons: (
     "counter": F199,
     "cow": F19A,
     "cowboy": FEB8,
+    "cpu-32-bit": FEFC,
+    "cpu-64-bit": FEFD,
     "crane": F861,
     "creation": F1C9,
     "creative-commons": FD47,
     "credit-card": F19B,
+    "credit-card-clock": FEFE,
+    "credit-card-clock-outline": FEFF,
     "credit-card-marker": FD9A,
     "credit-card-multiple": F19C,
     "credit-card-off": F5E4,
@@ -1421,9 +1435,17 @@ $mdi-icons: (
     "email-box": FCDF,
     "email-check": FAB0,
     "email-check-outline": FAB1,
+    "email-edit": FF00,
+    "email-edit-outline": FF01,
     "email-lock": F1F1,
     "email-mark-as-unread": FB6E,
+    "email-minus": FF02,
+    "email-minus-outline": FF03,
+    "email-multiple": FF04,
+    "email-multiple-outline": FF05,
     "email-open": F1EF,
+    "email-open-multiple": FF06,
+    "email-open-multiple-outline": FF07,
     "email-open-outline": F5EF,
     "email-outline": F1F0,
     "email-plus": F9EA,
@@ -1533,6 +1555,8 @@ $mdi-icons: (
     "file-alert": FA4A,
     "file-alert-outline": FA4B,
     "file-cabinet": FAB5,
+    "file-cad": FF08,
+    "file-cad-box": FF09,
     "file-cancel": FDA2,
     "file-cancel-outline": FDA3,
     "file-chart": F215,
@@ -1584,6 +1608,7 @@ $mdi-icons: (
     "file-pdf-outline": FE7D,
     "file-percent": F81D,
     "file-plus": F751,
+    "file-plus-outline": FF0A,
     "file-powerpoint": F227,
     "file-powerpoint-box": F228,
     "file-presentation-box": F229,
@@ -1610,7 +1635,11 @@ $mdi-icons: (
     "filmstrip": F230,
     "filmstrip-off": F231,
     "filter": F232,
+    "filter-minus": FF0B,
+    "filter-minus-outline": FF0C,
     "filter-outline": F233,
+    "filter-plus": FF0D,
+    "filter-plus-outline": FF0E,
     "filter-remove": F234,
     "filter-remove-outline": F235,
     "filter-variant": F236,
@@ -1619,6 +1648,7 @@ $mdi-icons: (
     "fingerprint": F237,
     "fingerprint-off": FECE,
     "fire": F238,
+    "fire-extinguisher": FF0F,
     "fire-truck": F8AA,
     "firebase": F966,
     "firefox": F239,
@@ -1626,6 +1656,10 @@ $mdi-icons: (
     "fireplace-off": FE12,
     "firework": FE13,
     "fish": F23A,
+    "fishbowl": FF10,
+    "fishbowl-outline": FF11,
+    "fit-to-page": FF12,
+    "fit-to-page-outline": FF13,
     "flag": F23B,
     "flag-checkered": F23C,
     "flag-minus": FB75,
@@ -1637,6 +1671,8 @@ $mdi-icons: (
     "flag-variant-outline": F23E,
     "flare": FD4E,
     "flash": F241,
+    "flash-alert": FF14,
+    "flash-alert-outline": FF15,
     "flash-auto": F242,
     "flash-circle": F81F,
     "flash-off": F243,
@@ -1999,6 +2035,7 @@ $mdi-icons: (
     "heart-broken-outline": FCF0,
     "heart-circle": F970,
     "heart-circle-outline": F971,
+    "heart-flash": FF16,
     "heart-half": F6DE,
     "heart-half-full": F6DD,
     "heart-half-outline": F6DF,
@@ -2046,6 +2083,7 @@ $mdi-icons: (
     "home-city": FCF1,
     "home-city-outline": FCF2,
     "home-currency-usd": F8AE,
+    "home-flood": FF17,
     "home-floor-0": FDAE,
     "home-floor-1": FD5C,
     "home-floor-2": FD5D,
@@ -2092,10 +2130,14 @@ $mdi-icons: (
     "human-male-boy": FA5B,
     "human-male-female": F2E8,
     "human-male-girl": FA5C,
+    "human-male-height": FF18,
+    "human-male-height-variant": FF19,
     "human-male-male": FA5D,
     "human-pregnant": F5CF,
     "humble-bundle": F743,
     "ice-cream": F829,
+    "ice-pop": FF1A,
+    "identifier": FF1B,
     "iframe": FC67,
     "iframe-outline": FC68,
     "image": F2E9,
@@ -2107,6 +2149,8 @@ $mdi-icons: (
     "image-filter": F2EF,
     "image-filter-black-white": F2F0,
     "image-filter-center-focus": F2F1,
+    "image-filter-center-focus-strong": FF1C,
+    "image-filter-center-focus-strong-outline": FF1D,
     "image-filter-center-focus-weak": F2F2,
     "image-filter-drama": F2F3,
     "image-filter-frames": F2F4,
@@ -2149,6 +2193,8 @@ $mdi-icons: (
     "itunes": F676,
     "jabber": FDB1,
     "jeepney": F302,
+    "jellyfish": FF1E,
+    "jellyfish-outline": FF1F,
     "jira": F303,
     "jquery": F87C,
     "jsfiddle": F304,
@@ -2217,6 +2263,7 @@ $mdi-icons: (
     "laptop-off": F6E6,
     "laptop-windows": F325,
     "laravel": FACF,
+    "lasso": FF20,
     "lastfm": F326,
     "lastpass": F446,
     "launch": F327,
@@ -2246,6 +2293,7 @@ $mdi-icons: (
     "library-books": F332,
     "library-movie": FCF4,
     "library-music": F333,
+    "library-music-outline": FF21,
     "library-plus": F334,
     "library-shelves": FB85,
     "library-video": FCF5,
@@ -2323,6 +2371,8 @@ $mdi-icons: (
     "map-clock-outline": FCFB,
     "map-legend": FA00,
     "map-marker": F34E,
+    "map-marker-alert": FF22,
+    "map-marker-alert-outline": FF23,
     "map-marker-check": FC71,
     "map-marker-circle": F34F,
     "map-marker-distance": F8EF,
@@ -2332,7 +2382,11 @@ $mdi-icons: (
     "map-marker-outline": F7D8,
     "map-marker-path": FCFC,
     "map-marker-plus": F651,
+    "map-marker-question": FF24,
+    "map-marker-question-outline": FF25,
     "map-marker-radius": F352,
+    "map-marker-remove": FF26,
+    "map-marker-remove-variant": FF27,
     "map-minus": F980,
     "map-outline": F981,
     "map-plus": F982,
@@ -2473,6 +2527,7 @@ $mdi-icons: (
     "nature-people": F38F,
     "navigation": F390,
     "near-me": F5CD,
+    "necklace": FF28,
     "needle": F391,
     "netflix": F745,
     "network": F6F2,
@@ -2492,6 +2547,8 @@ $mdi-icons: (
     "network-strength-outline": F8FD,
     "new-box": F394,
     "newspaper": F395,
+    "newspaper-minus": FF29,
+    "newspaper-plus": FF2A,
     "nfc": F396,
     "nfc-off": FE35,
     "nfc-search-variant": FE36,
@@ -2523,65 +2580,76 @@ $mdi-icons: (
     "numeric": F3A0,
     "numeric-0": 0030,
     "numeric-0-box": F3A1,
+    "numeric-0-box-multiple": FF2B,
     "numeric-0-box-multiple-outline": F3A2,
     "numeric-0-box-outline": F3A3,
     "numeric-0-circle": FC7A,
     "numeric-0-circle-outline": FC7B,
     "numeric-1": 0031,
     "numeric-1-box": F3A4,
+    "numeric-1-box-multiple": FF2C,
     "numeric-1-box-multiple-outline": F3A5,
     "numeric-1-box-outline": F3A6,
     "numeric-1-circle": FC7C,
     "numeric-1-circle-outline": FC7D,
     "numeric-2": 0032,
     "numeric-2-box": F3A7,
+    "numeric-2-box-multiple": FF2D,
     "numeric-2-box-multiple-outline": F3A8,
     "numeric-2-box-outline": F3A9,
     "numeric-2-circle": FC7E,
     "numeric-2-circle-outline": FC7F,
     "numeric-3": 0033,
     "numeric-3-box": F3AA,
+    "numeric-3-box-multiple": FF2E,
     "numeric-3-box-multiple-outline": F3AB,
     "numeric-3-box-outline": F3AC,
     "numeric-3-circle": FC80,
     "numeric-3-circle-outline": FC81,
     "numeric-4": 0034,
     "numeric-4-box": F3AD,
+    "numeric-4-box-multiple": FF2F,
     "numeric-4-box-multiple-outline": F3AE,
     "numeric-4-box-outline": F3AF,
     "numeric-4-circle": FC82,
     "numeric-4-circle-outline": FC83,
     "numeric-5": 0035,
     "numeric-5-box": F3B0,
+    "numeric-5-box-multiple": FF30,
     "numeric-5-box-multiple-outline": F3B1,
     "numeric-5-box-outline": F3B2,
     "numeric-5-circle": FC84,
     "numeric-5-circle-outline": FC85,
     "numeric-6": 0036,
     "numeric-6-box": F3B3,
+    "numeric-6-box-multiple": FF31,
     "numeric-6-box-multiple-outline": F3B4,
     "numeric-6-box-outline": F3B5,
     "numeric-6-circle": FC86,
     "numeric-6-circle-outline": FC87,
     "numeric-7": 0037,
     "numeric-7-box": F3B6,
+    "numeric-7-box-multiple": FF32,
     "numeric-7-box-multiple-outline": F3B7,
     "numeric-7-box-outline": F3B8,
     "numeric-7-circle": FC88,
     "numeric-7-circle-outline": FC89,
     "numeric-8": 0038,
     "numeric-8-box": F3B9,
+    "numeric-8-box-multiple": FF33,
     "numeric-8-box-multiple-outline": F3BA,
     "numeric-8-box-outline": F3BB,
     "numeric-8-circle": FC8A,
     "numeric-8-circle-outline": FC8B,
     "numeric-9": 0039,
     "numeric-9-box": F3BC,
+    "numeric-9-box-multiple": FF34,
     "numeric-9-box-multiple-outline": F3BD,
     "numeric-9-box-outline": F3BE,
     "numeric-9-circle": FC8C,
     "numeric-9-circle-outline": FC8D,
     "numeric-9-plus-box": F3BF,
+    "numeric-9-plus-box-multiple": FF35,
     "numeric-9-plus-box-multiple-outline": F3C0,
     "numeric-9-plus-box-outline": F3C1,
     "numeric-9-plus-circle": FC8E,
@@ -2598,6 +2666,7 @@ $mdi-icons: (
     "office": F3C6,
     "office-building": F990,
     "oil": F3C7,
+    "oil-lamp": FF36,
     "oil-temperature": F3C8,
     "omega": F3C9,
     "one-up": FB89,
@@ -2706,6 +2775,7 @@ $mdi-icons: (
     "perspective-more": FD00,
     "pharmacy": F3F1,
     "phone": F3F2,
+    "phone-alert": FF37,
     "phone-bluetooth": F3F3,
     "phone-classic": F602,
     "phone-forward": F3F4,
@@ -2763,6 +2833,7 @@ $mdi-icons: (
     "play-circle-outline": F40D,
     "play-network": F88A,
     "play-network-outline": FC93,
+    "play-outline": FF38,
     "play-pause": F40E,
     "play-protected-content": F40F,
     "play-speed": F8FE,
@@ -2850,6 +2921,8 @@ $mdi-icons: (
     "publish": F6A6,
     "pulse": F430,
     "pumpkin": FB9B,
+    "purse": FF39,
+    "purse-outline": FF3A,
     "puzzle": F431,
     "puzzle-outline": FA65,
     "qi": F998,
@@ -2881,6 +2954,7 @@ $mdi-icons: (
     "radiobox-marked": F43E,
     "radius": FC9C,
     "radius-outline": FC9D,
+    "railroad-light": FF3B,
     "raspberry-pi": F43F,
     "ray-end": F440,
     "ray-end-arrow": F441,
@@ -2924,6 +2998,8 @@ $mdi-icons: (
     "replay": F459,
     "reply": F45A,
     "reply-all": F45B,
+    "reply-all-outline": FF3C,
+    "reply-outline": FF3D,
     "reproduction": F45C,
     "resistor": FB1F,
     "resistor-nodes": FB20,
@@ -2972,6 +3048,7 @@ $mdi-icons: (
     "rowing": F608,
     "rss": F46B,
     "rss-box": F46C,
+    "rss-off": FF3E,
     "ruby": FD09,
     "rugby": FD75,
     "ruler": F46D,
@@ -3042,6 +3119,7 @@ $mdi-icons: (
     "selection": F489,
     "selection-drag": FA6C,
     "selection-ellipse": FD0E,
+    "selection-ellipse-arrow-inside": FF3F,
     "selection-off": F776,
     "send": F48A,
     "send-circle": FE58,
@@ -3077,6 +3155,8 @@ $mdi-icons: (
     "shape-rectangle-plus": F65F,
     "shape-square-plus": F660,
     "share": F496,
+    "share-off": FF40,
+    "share-off-outline": FF41,
     "share-outline": F931,
     "share-variant": F497,
     "sheep": FCA2,
@@ -3161,13 +3241,17 @@ $mdi-icons: (
     "skew-less": FD12,
     "skew-more": FD13,
     "skip-backward": F4AB,
+    "skip-backward-outline": FF42,
     "skip-forward": F4AC,
+    "skip-forward-outline": FF43,
     "skip-next": F4AD,
     "skip-next-circle": F661,
     "skip-next-circle-outline": F662,
+    "skip-next-outline": FF44,
     "skip-previous": F4AE,
     "skip-previous-circle": F663,
     "skip-previous-circle-outline": F664,
+    "skip-previous-outline": FF45,
     "skull": F68B,
     "skull-crossbones": FBA2,
     "skull-crossbones-outline": FBA3,
@@ -3186,6 +3270,8 @@ $mdi-icons: (
     "smoking-off": F4B5,
     "snapchat": F4B6,
     "snowflake": F716,
+    "snowflake-alert": FF46,
+    "snowflake-variant": FF47,
     "snowman": F4B7,
     "soccer": F4B8,
     "soccer-field": F833,
@@ -3286,6 +3372,8 @@ $mdi-icons: (
     "store-24-hour": F4DD,
     "stove": F4DE,
     "strava": FB25,
+    "stretch-to-page": FF48,
+    "stretch-to-page-outline": FF49,
     "subdirectory-arrow-left": F60C,
     "subdirectory-arrow-right": F60D,
     "subtitles": FA15,
@@ -3525,6 +3613,7 @@ $mdi-icons: (
     "twitter-circle": F546,
     "twitter-retweet": F547,
     "two-factor-authentication": F9AE,
+    "typewriter": FF4A,
     "uber": F748,
     "ubisoft": FBB6,
     "ubuntu": F548,
@@ -3676,25 +3765,36 @@ $mdi-icons: (
     "water-percent": F58E,
     "water-pump": F58F,
     "watermark": F612,
+    "wave": FF4B,
     "waves": F78C,
     "waze": FBBA,
     "weather-cloudy": F590,
+    "weather-cloudy-alert": FF4C,
     "weather-cloudy-arrow-right": FE51,
     "weather-fog": F591,
     "weather-hail": F592,
+    "weather-hazy": FF4D,
     "weather-hurricane": F897,
     "weather-lightning": F593,
     "weather-lightning-rainy": F67D,
     "weather-night": F594,
-    "weather-partlycloudy": F595,
+    "weather-night-partly-cloudy": FF4E,
+    "weather-partly-cloudy": F595,
+    "weather-partly-lightning": FF4F,
+    "weather-partly-rainy": FF50,
+    "weather-partly-snowy": FF51,
+    "weather-partly-snowy-rainy": FF52,
     "weather-pouring": F596,
     "weather-rainy": F597,
     "weather-snowy": F598,
+    "weather-snowy-heavy": FF53,
     "weather-snowy-rainy": F67E,
     "weather-sunny": F599,
+    "weather-sunny-alert": FF54,
     "weather-sunset": F59A,
     "weather-sunset-down": F59B,
     "weather-sunset-up": F59C,
+    "weather-tornado": FF55,
     "weather-windy": F59D,
     "weather-windy-variant": F59E,
     "web": F59F,
