--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=3.9.95");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=3.9.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=3.9.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=3.9.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=3.9.95") format("truetype");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=3.9.96");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=3.9.96") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=3.9.96") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=3.9.96") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=3.9.96") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -4500,6 +4500,10 @@
 
 .mdi-coffee::before {
   content: "\F176";
+}
+
+.mdi-coffee-off::before {
+  content: "\FFCA";
 }
 
 .mdi-coffee-outline::before {
