--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.9.95" !default;
+$mdi-version:          "3.9.96" !default;
 
 $mdi-icons: (
   "access-point": F002,
@@ -1129,6 +1129,7 @@ $mdi-icons: (
   "code-tags-check": F693,
   "codepen": F175,
   "coffee": F176,
+  "coffee-off": FFCA,
   "coffee-outline": F6C9,
   "coffee-to-go": F177,
   "coffin": FB5B,
